2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Explicitly init decompress_size.
	* util/grub-mkimagexx.c (MASK3): New define.
	(add_value_to_slot_20b): Use MASK3.
	(add_value_to_slot_21): Likewise.
	(relocate_addresses): Fix format specification.
	(load_image): Explicitly init symtab_section.

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_find_root_devices_from_mountinfo): Fix types.
	(grub_util_biosdisk_get_grub_dev): Fix format specification.

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/full.c (grub_arch_dl_get_tramp_got_size): Enable
	on powerpc.
	Reported by: Lennart Sorensen

2012-02-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Add missing license header.
	* docs/grub.texi: Update copyright year.

2012-02-10  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Source grub-mkconfig_lib from the build directory at build time.
	Suggested by: Vladimir Serbinenko.

	* gentpl.py (manpage): Set pkgdatadir to $(builddir) on help2man call.
	* util/grub-install.in: Define pkgdatadir if not already set, and source
	grub-mkconfig_lib from there.
	* util/grub-kbdcomp.in: Likewise.
	* util/grub-mkconfig.in: Likewise.
	* util/grub-mknetdir.in: Likewise.
	* util/grub-mkrescue.in: Likewise.
	* util/grub-mkstandalone.in: Likewise.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.
	* util/powerpc/ieee1275/grub-mkrescue.in: Likewise.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Increase warning level.

	* conf/Makefile.common (CFLAGS_GNULIB): Add -Wno-redundant-decls
	-Wno-unreachable-code -Wno-conversion -Wno-old-style-definition.
	* configure.ac (HOST_CFLAGS): Add bunch of -W arguments.
	(TARGET_CFLAGS): Likewise.
	(HOST_CFLAGS): Add -Werror unless --disable-werror is activated.
	* grub-core/Makefile.core.def (decompressor_xz): Add
	-Wno-unreachable-code.
	(normal): Add -Wno-redundant-decls.
	(xzio): Add -Wno-unreachable-code.